Fix: Hardcoded text & Language Logic
- Fix: Mengganti teks 'Profile Incomplete' manual menjadi i18n (Locales).
- Fix: Memaksa default language (ignore header telegram) saat onboarding.
- Content: Update copywriting Locales ID/EN/RU agar lebih user-friendly.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,12 @@
 {
-  "welcome_caption": "👋 <b>Welcome to OtterChatbot!</b>\n\nAn <i>Anonymous Chat</i> bot that connects you with new people based on chat topics.\n\n✨ <b>Why OtterChatbot?</b>\n• 🔒 <b>100% Private:</b> Your identity is secret.\n• 🌍 <b>Global:</b> Meet friends from various countries.\n• 🎭 <b>Fun Topics:</b> From dating to debates.\n\n<i>Ready to start? Click the button below:</i>",
-  "welcome_back": "👋 Welcome back, <b>%s</b>! Ready to chat?",
-  "ask_gender": "👤 <b>Identity Setup</b>\nHelp us find the right partner.\nWhat is your <b>Gender</b>?",
-  "ask_preference": "👀 <b>Search Preference</b>\nWho do you want to connect with?",
-  "ask_location": "📍 <b>Location</b>\nSelect your Country for better matching:",
+  "welcome_caption": "👋 <b>Welcome to OtterChatbot!</b>\n\nAn <i>Anonymous Chat</i> bot that connects you with new people based on topics.\n\n✨ <b>Why OtterChatbot?</b>\n• 🔒 <b>100% Private:</b> Your identity is hidden.\n• 🌍 <b>Global:</b> Meet friends from around the world.\n• 🎭 <b>Fun Topics:</b> From dating to debates.\n\n<i>Ready to begin? Click the button below:</i>",
+  "welcome_back": "👋 Welcome back, <b>%s</b>! Ready to chat again?",
+  "ask_gender": "👤 <b>Your Identity</b>\nHelp us find the right partner for you.\nWhat is your <b>Gender</b>?",
+  "ask_preference": "👀 <b>Match Preference</b>\nWho would you like to be connected with?",
+  "ask_location": "📍 <b>Location</b>\nSelect your country for better matching:",
   "location_saved": "✅ Location updated: <b>%s</b>",
-  "ask_lang": "🌐 <b>Language Settings</b>\nSelect interface language:",
+  "ask_lang": "🌐 <b>Language Settings</b>\nChoose your interface language:",
+  "profile_incomplete": "⚠️ <b>Profile Incomplete!</b>\nPlease set your gender before continuing.",
   "btn_search": "🔍 Find Partner",
   "btn_profile": "👤 My Profile",
   "btn_vip": "🌟 Upgrade VIP",
@@ -20,33 +21,33 @@
   "btn_back": "🔙 Back",
   "btn_reconnect": "🔄 Reconnect (VIP)",
   "btn_contact_admin": "📩 Contact Admin",
-  "profile_view": "👤 <b>MY PROFILE</b>\n━━━━━━━━━━━━━━━━\n🆔 Name: <code>%s</code>\n⚧ Gender: <b>%s</b>\n👀 Looking for: <b>%s</b>\n📍 Location: <b>%s</b>\n\n💎 Status: <b>%s</b>\n━━━━━━━━━━━━━━━━",
-  "setup_complete": "✅ <b>Profile Ready!</b>\nYou can now start searching for friends.",
-  "select_mood": "🎭 <b>Select Chat Topic</b>\nWhat is your goal today?",
-  "mood_dating": "🌹 Dating / Romance",
-  "mood_deeptalk": "☕ Vent / Deep Talk",
-  "mood_fun": "👻 Bored / Have Fun",
-  "mood_debate": "🗣 Debate / Discuss",
-  "joined_queue": "🔎 <b>Searching for Partner...</b>\nTopic: <b>%s</b>\n\n<i>Please wait, scanning the server...</i>",
-  "partner_found": "🎉 <b>PARTNER FOUND!</b>\n\nSay \"Hi\" to start chatting! 👋\n<i>Type /stop to end this session.</i>",
+  "profile_view": "👤 <b>MY PROFILE</b>\n\n🆔 Name: <code>%s</code>\n⚧ Gender: <b>%s</b>\n👀 Looking for: <b>%s</b>\n📍 Location: <b>%s</b>\n\n💎 Status: <b>%s</b>",
+  "setup_complete": "✅ <b>Profile Ready!</b>\nYou can now start searching for new friends.",
+  "select_mood": "🎭 <b>Select Conversation Topic</b>\nWhat are you looking for today?",
+  "mood_dating": "🌹 Dating",
+  "mood_deeptalk": "☕ Deep Talk",
+  "mood_fun": "👻 Fun / Random",
+  "mood_debate": "🗣 Debate",
+  "joined_queue": "🔎 <b>Searching for Partner...</b>\nTopic: <b>%s</b>\n\n<i>Please wait, scanning servers...</i>",
+  "partner_found": "🎉 <b>PARTNER FOUND!</b>\n\nSay \"Hi\" to start the chat! 👋\n<i>Type /stop to end the session.</i>",
   "chat_ended": "⛔ <b>Session Ended</b>\nYou disconnected.",
-  "partner_left": "⛔ <b>Partner Left</b>\nYour chat partner has disconnected.",
-  "partner_lost": "⚠️ <b>Connection Lost</b>\nSorry, a network error occurred.",
-  "vip_info": "🌟 <b>VIP MEMBERSHIP</b>\n\nEnjoy limitless features:\n\n✅ <b>Instant Reconnect:</b> Disconnected? Call back your last partner.\n✅ <b>Priority Queue:</b> Get matches faster than free users.\n✅ <b>Strict Filter:</b> Gender filter remains active in Fun/Debate modes.\n\n💸 <b>Choose a Plan:</b>",
-  "vip_pitch": "🔒 <b>FEATURE LOCKED</b>\n\nOh no... Your partner is gone!\nOnly <b>VIP Members</b> can use the <b>Reconnect</b> button to call them back.\n\n<i>Upgrade now to unlock this feature!</i>",
+  "partner_left": "⛔ <b>Partner Left</b>\nYour chat partner has exited the conversation.",
+  "partner_lost": "⚠️ <b>Connection Lost</b>\nSorry, a network issue occurred.",
+  "vip_info": "🌟 <b>VIP MEMBER</b>\n\nEnjoy unlimited features:\n\n✅ <b>Instant Reconnect:</b> Lost your partner? Bring them back.\n✅ <b>Priority Queue:</b> Get matched faster than free users.\n✅ <b>Strict Filters:</b> Still filter genders in Fun/Debate mode.\n\n💸 <b>Choose a Package:</b>",
+  "vip_pitch": "🔒 <b>FEATURE LOCKED</b>\n\nOops... your partner is gone!\nOnly <b>VIP Members</b> can use <b>Reconnect</b> to bring them back.\n\n<i>Upgrade now to unlock this feature!</i>",
   "btn_buy_format": "⭐️ %d Days (%d Stars)",
-  "vip_weekly_title": "Weekly Plan",
+  "vip_weekly_title": "Weekly Package",
   "vip_weekly_desc": "Full VIP access for 7 days.",
-  "vip_monthly_title": "Monthly Plan",
-  "vip_monthly_desc": "Full VIP access for 30 days (Best Value!).",
+  "vip_monthly_title": "Monthly Package",
+  "vip_monthly_desc": "Full VIP access for 30 days (Best Deal!).",
   "vip_contact_url": "https://t.me/ilyabtr",
-  "help_menu": "❓ <b>HELP CENTER</b>\nConfused? Select a topic below:",
+  "help_menu": "❓ <b>HELP CENTER</b>\nConfused how to use the bot? Choose a topic below:",
   "help_btn_basic": "📚 How to Use",
-  "help_btn_cmd": "🤖 Command List",
+  "help_btn_cmd": "🤖 Commands",
   "help_btn_rules": "🛡️ Rules & Ethics",
-  "help_content_basic": "📚 <b>Beginner Guide</b>\n\n1️⃣ <b>Fill Profile:</b> Ensure Gender and Preferences are set.\n2️⃣ <b>Start:</b> Click <b>🔍 Find Partner</b> on the main menu.\n3️⃣ <b>Choose Topic:</b> Pick a topic (Dating, Fun, etc).\n4️⃣ <b>Chatting:</b> Wait for a match & start talking!\n5️⃣ <b>Finish:</b> Type <code>/stop</code> to change partners.",
-  "help_content_cmd": "🤖 <b>Command List</b>\n\n• <code>/start</code> : Open Main Menu / Restart Bot\n• <code>/search</code> : Quick shortcut to find partner\n• <code>/stop</code> : End current chat\n• <code>/next</code> : End & search new partner immediately\n• <code>/profile</code> : View & edit profile\n• <code>/vip</code> : VIP purchase info\n• <code>/reconnect</code> : (VIP) Reconnect with last partner",
-  "help_content_rules": "🛡️ <b>Community Rules</b>\n\nFor everyone's comfort, prohibited:\n❌ Spam, Ads, or Promotions.\n❌ Scams or asking for money.\n❌ Illegal content or child exploitation.\n❌ Verbal abuse/harassment.\n\n<i>Violations will result in a Permanent Ban.</i>",
-  "about_text": "🤖 <b>About OtterChatbot</b>\n\nVersion: 2.0 (Stable)\nDeveloper: @ilyabtr\n\nThis bot is designed to connect people anonymously yet purposefully. We do not store your chat contents.",
-  "error_generic": "❌ System error occurred."
+  "help_content_basic": "📚 <b>Beginner Guide</b>\n\n1️⃣ <b>Fill Your Profile:</b> Make sure your Gender and Preference are correct.\n2️⃣ <b>Start:</b> Click <b>🔍 Find Partner</b> in the main menu.\n3️⃣ <b>Choose Topic:</b> Select a topic (Dating, Fun, etc).\n4️⃣ <b>Chat:</b> Wait for a partner & start talking!\n5️⃣ <b>Finish:</b> Type <code>/stop</code> to change partner.",
+  "help_content_cmd": "🤖 <b>List of Commands</b>\n\n• <code>/start</code> : Open Main Menu / Restart Bot\n• <code>/search</code> : Quick search\n• <code>/stop</code> : End current chat\n• <code>/next</code> : Disconnect & search again\n• <code>/profile</code> : View & edit profile\n• <code>/vip</code> : VIP info\n• <code>/reconnect</code> : (VIP) Reconnect previous partner",
+  "help_content_rules": "🛡️ <b>Community Rules</b>\n\nFor everyone's comfort, the following are not allowed:\n❌ Spam, advertising, or promotions.\n❌ Scamming or asking for money.\n❌ Illegal content or child pornography.\n❌ Verbal abuse/harassment.\n\n<i>Violations will result in a permanent ban.</i>",
+  "about_text": "🤖 <b>About OtterChatbot</b>\n\nVersion: 2.0 (Stable)\nDeveloper: @ilyabtr\n\nThis bot connects people randomly but meaningfully. We do not store your chat content.",
+  "error_generic": "❌ A system error occurred."
 }
