--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,52 +1,53 @@
 {
-  "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nБот для <i>анонимного чата</i>, который соединяет вас с новыми людьми по интересам.\n\n✨ <b>Почему OtterChatbot?</b>\n• 🔒 <b>100% Приватно:</b> Твоя личность скрыта.\n• 🌍 <b>Глобально:</b> Находи друзей из разных стран.\n• 🎭 <b>Темы:</b> От свиданий до жарких споров.\n\n<i>Готов начать? Жми кнопку ниже:</i>",
-  "welcome_back": "👋 С возвращением, <b>%s</b>! Готов общаться?",
-  "ask_gender": "👤 <b>Твоя Личность</b>\nПомоги нам подобрать пару.\nУкажи свой <b>Пол</b>:",
-  "ask_preference": "👀 <b>Поиск</b>\nС кем ты хочешь общаться?",
-  "ask_location": "📍 <b>Локация</b>\nВыбери страну для точного поиска:",
+  "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nБот для <i>анонимного чата</i>, который находит вам собеседников по интересам.\n\n✨ <b>Почему OtterChatbot?</b>\n• 🔒 <b>100% Приватность:</b> Ваша личность скрыта.\n• 🌍 <b>Глобально:</b> Знакомьтесь с людьми со всего мира.\n• 🎭 <b>Разные темы:</b> От знакомств до дебатов.\n\n<i>Готовы начать? Нажмите кнопку ниже:</i>",
+  "welcome_back": "👋 С возвращением, <b>%s</b>! Готовы снова пообщаться?",
+  "ask_gender": "👤 <b>Ваши данные</b>\nПомогите нам подобрать подходящего собеседника.\nУкажите ваш <b>гендер</b>:",
+  "ask_preference": "👀 <b>Предпочтения</b>\nС кем вы хотите быть соединены?",
+  "ask_location": "📍 <b>Локация</b>\nВыберите свою страну для более точного подбора:",
   "location_saved": "✅ Локация обновлена: <b>%s</b>",
-  "ask_lang": "🌐 <b>Язык</b>\nВыберите язык интерфейса:",
+  "ask_lang": "🌐 <b>Настройки языка</b>\nВыберите язык интерфейса:",
+  "profile_incomplete": "⚠️ <b>Профиль не заполнен!</b>\nПожалуйста, укажите свой гендер, прежде чем продолжить.",
   "btn_search": "🔍 Найти собеседника",
-  "btn_profile": "👤 Мой Профиль",
-  "btn_vip": "🌟 Купить VIP",
-  "btn_help": "❓ Помощь",
-  "btn_male": "👨 М",
-  "btn_female": "👩 Ж",
-  "btn_both": "👫 Все",
-  "btn_edit_gender": "✏️ Пол",
-  "btn_edit_pref": "✏️ Поиск",
-  "btn_edit_loc": "📍 Страна",
+  "btn_profile": "👤 Мой профиль",
+  "btn_vip": "🌟 VIP-подписка",
+  "btn_help": "❓ Центр помощи",
+  "btn_male": "👨 Мужчина",
+  "btn_female": "👩 Женщина",
+  "btn_both": "👫 Оба",
+  "btn_edit_gender": "✏️ Гендер",
+  "btn_edit_pref": "✏️ Предпочтения",
+  "btn_edit_loc": "📍 Локация",
   "btn_lang": "🌐 Язык",
   "btn_back": "🔙 Назад",
-  "btn_reconnect": "🔄 Вернуть (VIP)",
-  "btn_contact_admin": "📩 Админ",
-  "profile_view": "👤 <b>МОЙ ПРОФИЛЬ</b>\n━━━━━━━━━━━━━━━━\n🆔 Имя: <code>%s</code>\n⚧ Пол: <b>%s</b>\n👀 Поиск: <b>%s</b>\n📍 Страна: <b>%s</b>\n\n💎 Статус: <b>%s</b>\n━━━━━━━━━━━━━━━━",
-  "setup_complete": "✅ <b>Профиль готов!</b>\nТеперь можно искать собеседника.",
-  "select_mood": "🎭 <b>Выбери Тему</b>\nО чем хочешь поговорить?",
-  "mood_dating": "🌹 Знакомства / Романтика",
-  "mood_deeptalk": "☕ Поговорить по душам",
-  "mood_fun": "👻 Скучно / Веселье",
-  "mood_debate": "🗣 Споры / Дискуссии",
-  "joined_queue": "🔎 <b>Поиск собеседника...</b>\nТема: <b>%s</b>\n\n<i>Подождите, сканируем сервер...</i>",
-  "partner_found": "🎉 <b>СОБЕСЕДНИК НАЙДЕН!</b>\n\nСкажи \"Привет\"! 👋\n<i>Напиши /stop чтобы закончить.</i>",
-  "chat_ended": "⛔ <b>Сессия Завершена</b>\nВы отключились.",
-  "partner_left": "⛔ <b>Собеседник Ушел</b>\nТвой партнер покинул чат.",
-  "partner_lost": "⚠️ <b>Ошибка Связи</b>\nИзвините, проблема с сетью.",
-  "vip_info": "🌟 <b>VIP СТАТУС</b>\n\nНаслаждайся без ограничений:\n\n✅ <b>Мгновенный Возврат:</b> Вылетел? Верни собеседника.\n✅ <b>Приоритет:</b> Находи пару быстрее, чем бесплатные юзеры.\n✅ <b>Строгий Фильтр:</b> Фильтр пола работает даже в темах Веселье/Споры.\n\n💸 <b>Выберите тариф:</b>",
-  "vip_pitch": "🔒 <b>ФУНКЦИЯ ЗАКРЫТА</b>\n\nОй... Собеседник пропал!\nТолько <b>VIP участники</b> могут использовать кнопку <b>Вернуть</b>.\n\n<i>Обновитесь сейчас, чтобы открыть функцию!</i>",
-  "btn_buy_format": "⭐️ %d Дней (%d Stars)",
-  "vip_weekly_title": "Недельный план",
-  "vip_weekly_desc": "Полный VIP доступ на 7 дней.",
-  "vip_monthly_title": "Месячный план",
-  "vip_monthly_desc": "Полный VIP на 30 дней (Выгодно!).",
+  "btn_reconnect": "🔄 Переподключить (VIP)",
+  "btn_contact_admin": "📩 Связаться с админом",
+  "profile_view": "👤 <b>МОЙ ПРОФИЛЬ</b>\n\n🆔 Имя: <code>%s</code>\n⚧ Гендер: <b>%s</b>\n👀 Ищу: <b>%s</b>\n📍 Локация: <b>%s</b>\n\n💎 Статус: <b>%s</b>",
+  "setup_complete": "✅ <b>Профиль готов!</b>\nТеперь вы можете начать поиск собеседника.",
+  "select_mood": "🎭 <b>Выберите тему беседы</b>\nКакова цель вашего общения сегодня?",
+  "mood_dating": "🌹 Знакомства",
+  "mood_deeptalk": "☕ Душевный разговор",
+  "mood_fun": "👻 Развлечения",
+  "mood_debate": "🗣 Дебаты",
+  "joined_queue": "🔎 <b>Поиск собеседника...</b>\nТема: <b>%s</b>\n\n<i>Пожалуйста, подождите, идет поиск...</i>",
+  "partner_found": "🎉 <b>СОБЕСЕДНИК НАЙДЕН!</b>\n\nСкажите «Привет», чтобы начать разговор! 👋\n<i>Введите /stop, чтобы завершить беседу.</i>",
+  "chat_ended": "⛔ <b>Сессия завершена</b>\nВы отключились.",
+  "partner_left": "⛔ <b>Собеседник вышел</b>\nВаш собеседник покинул чат.",
+  "partner_lost": "⚠️ <b>Потеря соединения</b>\nПроизошла ошибка сети.",
+  "vip_info": "🌟 <b>VIP-ПОДПИСКА</b>\n\nПолучите доступ ко всем функциям:\n\n✅ <b>Мгновенное переподключение:</b> Верните последнего собеседника.\n✅ <b>Приоритетная очередь:</b> Быстрый подбор собеседника.\n✅ <b>Строгие фильтры:</b> Фильтрация по гендеру даже в развлекательных режимах.\n\n💸 <b>Выберите пакет:</b>",
+  "vip_pitch": "🔒 <b>ФУНКЦИЯ ЗАБЛОКИРОВАНА</b>\n\nУпс... ваш собеседник пропал!\nТолько <b>VIP-пользователи</b> могут использовать <b>Переподключение</b>.\n\n<i>Оформите подписку, чтобы разблокировать эту функцию!</i>",
+  "btn_buy_format": "⭐️ %d дней (%d звёзд)",
+  "vip_weekly_title": "Недельный пакет",
+  "vip_weekly_desc": "Полный доступ VIP на 7 дней.",
+  "vip_monthly_title": "Месячный пакет",
+  "vip_monthly_desc": "Полный доступ VIP на 30 дней (выгодно!).",
   "vip_contact_url": "https://t.me/ilyabtr",
-  "help_menu": "❓ <b>ЦЕНТР ПОМОЩИ</b>\nЗапутались? Выберите тему ниже:",
-  "help_btn_basic": "📚 Как начать",
+  "help_menu": "❓ <b>ЦЕНТР ПОМОЩИ</b>\nЕсли вы запутались, выберите тему ниже:",
+  "help_btn_basic": "📚 Как пользоваться",
   "help_btn_cmd": "🤖 Команды",
   "help_btn_rules": "🛡️ Правила",
-  "help_content_basic": "📚 <b>Инструкция для новичков</b>\n\n1️⃣ <b>Профиль:</b> Проверь пол и кого ищешь.\n2️⃣ <b>Старт:</b> Жми <b>🔍 Найти</b> в меню.\n3️⃣ <b>Тема:</b> Выбери тему (Знакомства и др).\n4️⃣ <b>Чат:</b> Жди пару и начинай общаться!\n5️⃣ <b>Финиш:</b> Пиши <code>/stop</code> для смены партнера.",
-  "help_content_cmd": "🤖 <b>Список Команд</b>\n\n• <code>/start</code> : Главное меню / Перезапуск\n• <code>/search</code> : Быстрый поиск\n• <code>/stop</code> : Остановить текущий чат\n• <code>/next</code> : Сбросить и искать нового\n• <code>/profile</code> : Настройки профиля\n• <code>/vip</code> : Инфо о покупке VIP\n• <code>/reconnect</code> : (VIP) Вернуть последнего",
-  "help_content_rules": "🛡️ <b>Правила Сообщества</b>\n\nРади комфорта всех запрещено:\n❌ Спам, Реклама.\n❌ Мошенничество / просьбы денег.\n❌ Незаконный контент.\n❌ Оскорбления / Агрессия.\n\n<i>Нарушители получат Бан Навсегда.</i>",
-  "about_text": "🤖 <b>О боте OtterChatbot</b>\n\nВерсия: 2.0 (Stable)\nРазработчик: @ilyabtr\n\nБот создан для анонимного, но целенаправленного общения. Мы не храним историю вашей переписки.",
-  "error_generic": "❌ Ошибка системы."
+  "help_content_basic": "📚 <b>Руководство для новичков</b>\n\n1️⃣ <b>Заполните профиль:</b> Убедитесь, что гендер и предпочтения указаны.\n2️⃣ <b>Начните:</b> Нажмите <b>🔍 Найти собеседника</b>.\n3️⃣ <b>Выберите тему:</b> Знакомства, общение и т.д.\n4️⃣ <b>Общайтесь:</b> Дождитесь собеседника и начинайте беседу!\n5️⃣ <b>Завершение:</b> Введите <code>/stop</code>, чтобы сменить собеседника.",
+  "help_content_cmd": "🤖 <b>Список команд</b>\n\n• <code>/start</code> : Главное меню / перезапуск бота\n• <code>/search</code> : Быстрый поиск\n• <code>/stop</code> : Завершить беседу\n• <code>/next</code> : Прервать и искать нового\n• <code>/profile</code> : Профиль\n• <code>/vip</code> : Информация о VIP\n• <code>/reconnect</code> : (VIP) Переподключить предыдущего собеседника",
+  "help_content_rules": "🛡️ <b>Правила сообщества</b>\n\nЗапрещено:\n❌ Спам, реклама, продвижение.\n❌ Мошенничество или просьбы о деньгах.\n❌ Незаконный контент или детская порнография.\n❌ Оскорбления и домогательства.\n\n<i>Нарушения приводят к перманентному бану.</i>",
+  "about_text": "🤖 <b>О OtterChatbot</b>\n\nВерсия: 2.0 (Stable)\nРазработчик: @ilyabtr\n\nБот создан для того, чтобы анонимно соединять людей. Мы не храним ваши сообщения.",
+  "error_generic": "❌ Произошла ошибка системы."
 }
