--- a/locales/ru.json
+++ b/locales/ru.json
@@ -49,5 +49,11 @@
   "help_content_cmd": "🤖 <b>Список команд</b>\n\n• <code>/start</code> : Главное меню / перезапуск бота\n• <code>/search</code> : Быстрый поиск\n• <code>/stop</code> : Завершить беседу\n• <code>/next</code> : Прервать и искать нового\n• <code>/profile</code> : Профиль\n• <code>/vip</code> : Информация о VIP\n• <code>/reconnect</code> : (VIP) Переподключить предыдущего собеседника",
   "help_content_rules": "🛡️ <b>Правила сообщества</b>\n\nЗапрещено:\n❌ Спам, реклама, продвижение.\n❌ Мошенничество или просьбы о деньгах.\n❌ Незаконный контент или детская порнография.\n❌ Оскорбления и домогательства.\n\n<i>Нарушения приводят к перманентному бану.</i>",
   "about_text": "🤖 <b>О OtterChatbot</b>\n\nВерсия: 2.0 (Stable)\nРазработчик: @ilyabtr\n\nБот создан для того, чтобы анонимно соединять людей. Мы не храним ваши сообщения.",
-  "error_generic": "❌ Произошла ошибка системы."
+  "error_generic": "❌ Произошла ошибка системы.",
+  "game_panel_title": "🎮 <b>ИГРОВОЙ ЦЕНТР</b>",
+  "game_panel_desc": "Скучно просто болтать? Выберите веселое задание ниже, чтобы развлечься с партнером!",
+  "btn_truth": "❓ Правда",
+  "btn_dare": "🔥 Действие",
+  "btn_close_panel": "❌ Закрыть панель",
+  "game_requested_by": "Запрошено партнером."
 }
