--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,5 +1,5 @@
 {
-  "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nБот для <i>анонимного чата</i>, который находит вам собеседников по интересам.\n\n✨ <b>Почему OtterChatbot?</b>\n• 🔒 <b>100% Приватность:</b> Ваша личность скрыта.\n• 🌍 <b>Глобально:</b> Знакомьтесь с людьми со всего мира.\n• 🎭 <b>Разные темы:</b> От знакомств до дебатов.\n\n<i>Готовы начать? Нажмите кнопку ниже:</i>",
+"welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nБот <i>Анонимный Чат</i>, который соединяет тебя с новыми людьми по интересам.\n\n✨ <b>Почему OtterChatbot?</b>\n• 🔒 <b>100 % приватность:</b> Твоя личность остаётся в секрете.\n• 🌍 <b>Глобально:</b> Найди друзей из разных стран.\n• 🎭 <b>Весёлые темы:</b> От поиска пары до поиска друзей для игр.\n• 🎮 <b>Темы никогда не кончаются:</b> Ведь есть игра «правда или действие» — просто выполни команду /game.\n\n<i>Готов начать? Нажми кнопку ниже:</i>",
   "welcome_back": "👋 С возвращением, <b>%s</b>! Готовы снова пообщаться?",
   "ask_gender": "👤 <b>Ваши данные</b>\nПомогите нам подобрать подходящего собеседника.\nУкажите ваш <b>гендер</b>:",
   "ask_preference": "👀 <b>Предпочтения</b>\nС кем вы хотите быть соединены?",
