--- a/locales/id.json
+++ b/locales/id.json
@@ -62,5 +62,5 @@
   "btn_truth": "❓ Truth",
   "btn_dare": "🔥 Dare",
   "btn_close_panel": "❌ Tutup Panel",
-  "game_requested_by": "Diminta oleh partner."
+  "game_requested_by": "<blockquote>📌 Diminta oleh partner.</blockquote>"
 }
