--- a/locales/ru.json
+++ b/locales/ru.json
@@ -55,5 +55,16 @@
   "btn_truth": "❓ Правда",
   "btn_dare": "🔥 Действие",
   "btn_close_panel": "❌ Закрыть панель",
-  "game_requested_by": "Запрошено партнером."
+  "game_requested_by": "Запрошено партнером.",
+  "report_error_no_chat": "⚠️ Вы можете пожаловаться только во время чата.",
+  "report_menu_title": "🚨 <b>ПОЖАЛОВАТЬСЯ</b>\n\nПочему вы хотите пожаловаться на этого пользователя?",
+  "report_reason_porn": "🔞 Порнография / 18+",
+  "report_reason_harass": "🤬 Оскорбления / Грубость",
+  "report_reason_spam": "📢 Спам / Реклама",
+  "report_reason_scam": "👺 Мошенничество",
+  "report_btn_cancel": "❌ Отмена",
+  "report_sent": "✅ <b>Жалоба отправлена!</b>\nАдминистратор проверит её в ближайшее время. Введите /stop, чтобы покинуть чат.",
+  "report_error_generic": "⚠️ Ошибка обработки жалобы.",
+  "ban_notification": "⛔ <b>ВЫ ЗАБАНЕНЫ</b>\n\nВы были навсегда заблокированы в OtterChatbot за нарушение правил.",
+  "warn_notification": "⚠️ <b>ПРЕДУПРЕЖДЕНИЕ ОТ АДМИНА</b>\n\nМы получили жалобу на ваше поведение. Пожалуйста, соблюдайте правила, иначе вы будете забанены."
 }
