--- a/locales/en.json
+++ b/locales/en.json
@@ -41,7 +41,7 @@
   "vip_weekly_desc": "Full VIP access for 7 days.",
   "vip_monthly_title": "Monthly Package",
   "vip_monthly_desc": "Full VIP access for 30 days (Best Deal!).",
-  "vip_contact_url": "https://t.me/ilyabtr",
+  "vip_contact_url": "https://t.me/otterchatEn",
   "help_menu": "❓ <b>HELP CENTER</b>\nConfused how to use the bot? Choose a topic below:",
   "help_btn_basic": "📚 How to Use",
   "help_btn_cmd": "🤖 Commands",
