--- a/locales/id.json
+++ b/locales/id.json
@@ -41,7 +41,7 @@
   "vip_weekly_desc": "Akses VIP penuh selama 7 hari.",
   "vip_monthly_title": "Paket Bulanan",
   "vip_monthly_desc": "Akses VIP penuh 30 hari (Hemat!).",
-  "vip_contact_url": "https://t.me/ilyabtr",
+  "vip_contact_url": "https://t.me/otterchatEn",
   "help_menu": "❓ <b>PUSAT BANTUAN</b>\nBingung cara pakainya? Pilih topik di bawah:",
   "help_btn_basic": "📚 Cara Pakai",
   "help_btn_cmd": "🤖 Daftar Perintah",
