--- a/locales/ru.json
+++ b/locales/ru.json
@@ -40,7 +40,7 @@
   "vip_weekly_desc": "Полный доступ VIP на 7 дней.",
   "vip_monthly_title": "Месячный пакет",
   "vip_monthly_desc": "Полный доступ VIP на 30 дней (выгодно!).",
-  "vip_contact_url": "https://t.me/ilyabtr",
+  "vip_contact_url": "https://t.me/otterchatEn",
   "help_menu": "❓ <b>ЦЕНТР ПОМОЩИ</b>\nЕсли вы запутались, выберите тему ниже:",
   "help_btn_basic": "📚 Как пользоваться",
   "help_btn_cmd": "🤖 Команды",
