--- a/locales/ru.json
+++ b/locales/ru.json
@@ -66,5 +66,19 @@
   "report_sent": "✅ <b>Жалоба отправлена!</b>\nАдминистратор проверит её в ближайшее время. Введите /stop, чтобы покинуть чат.",
   "report_error_generic": "⚠️ Ошибка обработки жалобы.",
   "ban_notification": "⛔ <b>ВЫ ЗАБАНЕНЫ</b>\n\nВы были навсегда заблокированы в OtterChatbot за нарушение правил.",
-  "warn_notification": "⚠️ <b>ПРЕДУПРЕЖДЕНИЕ ОТ АДМИНА</b>\n\nМы получили жалобу на ваше поведение. Пожалуйста, соблюдайте правила, иначе вы будете забанены."
+  "warn_notification": "⚠️ <b>ПРЕДУПРЕЖДЕНИЕ ОТ АДМИНА</b>\n\nМы получили жалобу на ваше поведение. Пожалуйста, соблюдайте правила, иначе вы будете забанены.",
+  "mood_all": "🚀 Все темы",
+
+  "afk_alert_1": "👋 <b>Привет?</b> Ты здесь?\nТвой партнер ждет ответа.. 👀",
+  "afk_alert_2": "💤 <b>Занят?</b>\nЕсли хочешь закончить, напиши /stop.",
+
+  "match_title": "🔔 <b>ПАРТНЕР НАЙДЕН!</b>",
+  "match_topic": "Тема",
+  "partner_info": "👤 <b>Инфо о партнере:</b>",
+  "gender_male": "Мужчина 👨",
+  "gender_female": "Женщина 👩",
+  "gender_unknown": "Скрыто 👽",
+  "status_vip": "VIP Участник 🌟",
+  "status_regular": "Пользователь ☁️",
+  "match_tip": "💡 <i>Совет: Скажите 'Привет'!</i>"
 }
